# volt-down

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/volt-core/: Cargo.toml
crates/volt-core/src/: database.rs  download.rs  error.rs  lib.rs  main.rs  models.rs  queue.rs  ytdlp.rs
crates/volt-core/tests/: download_e2e.rs
crates/volt-native-host/: Cargo.toml
crates/volt-native-host/src/: main.rs
crates/volt-tauri/: app.js  index.html  style.css
crates/volt-tauri/src-tauri/: Cargo.toml  tauri.conf.json
crates/volt-tauri/src-tauri/src/: main.rs
extension/chrome/: background.js  com.voltdown.native.json  content.js  manifest.json  popup.html  popup.js
scripts/: clipboard-monitor.py  install-native-host.sh
