[workspace]
members = ["crates/volt-core", "crates/volt-tauri/src-tauri", "crates/volt-native-host"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VoltDown Contributors"]
license = "MIT"
repository = "https://github.com/pat/volt-down"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
bytes = "1"
futures = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
