[package]
name = "volt-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "voltdown"
path = "src/main.rs"

[lib]
name = "volt_core"
path = "src/lib.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
which = "6"
dirs = "5"
uuid = { version = "1", features = ["v4", "serde"] }
dashmap = "6"
tokio-util = "0.7"
url = "2"

# CLI deps
clap = { version = "4", features = ["derive"] }
axum = "0.7"

[dev-dependencies]
tempfile = "3"
