[package]
name = "volt-native-host"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "voltdown-native"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
